[package]
name = "some-auth"
description = "This crate provides auth logic usually used in API services (user management and repository, JWT with refresh auth) out of the box."
version = "0.0.25"
edition = "2021"
authors = ["shurikeagle <alexander.orlov22@gmail.com>"]
repository = "https://github.com/shurikeagle/some-auth.git"
license = "MIT"
keywords = ["jwt", "auth", "user service", "axum auth", "auth middleware"]

[dependencies]
async-trait = "0.1.81"
axum = { version = "0.7.5", optional = true }
bcrypt = "0.15.1"
chrono = "0.4.38"
hex = "0.4.3"
jsonwebtoken = { version = "9.3.0", default-features = false }
mockall = "0.13.0"
regex = "1.10.5"
serde = "1.0.204"
sha2 = "0.10.8"
tokio = { version = "1.38.1", features = ["macros", "rt"] }

[features]
axum-auth = [ "dep:axum" ]