[package]
name = "some-auth"
description = "User management and JWT logic for API services."
version = "0.1.5"
edition = "2021"
authors = ["shurikeagle <alexander.orlov22@gmail.com>"]
repository = "https://github.com/shurikeagle/some-auth.git"
documentation = "https://docs.rs/some-auth"
license = "MIT"
keywords = ["jwt", "auth", "users", "middleware", "api"]

[dependencies]
async-trait = "0.1.82"
axum = { version = "0.7.5", optional = true }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"
jsonwebtoken = { version = "9.3.0", default-features = false }
mockall = "0.13.0"
regex = "1.10.6"
serde = "1.0.210"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["macros", "rt"] }
tokio-postgres = { version = "0.7.12", features = [
    "with-chrono-0_4",
    "with-uuid-1",
], optional = true }

[features]
axum-auth = ["dep:axum"]
pg-repository = ["dep:tokio-postgres"]
